# quick-perf-event

./: Cargo.toml  readme.md
examples/: basic.rs  live-table-wrapping.rs  ptr_loop.rs  short.rs  struct_labels.rs  tables.rs
src/: counters.rs  formats.rs  labels.rs  lib.rs  live_table.rs  perf_counters.rs  streaming_table.rs  tabled_float.rs
src/counters/: manual_backend.rs  perf_backend.rs  time_backend.rs
src/formats/: csv.rs  live.rs  live_table.rs  tabled.rs
src/perf_counters/: combine_counters.rs  perf_backend.rs  time_backend.rs
