[package]
name = "quick_perf_event"
version = "0.1.0"
edition = "2024"

[dependencies]
perf-event2="0.7.4"
tabled = {version = "0.20.0",default-features = false,features = ["std"]}
csv = "1.4"
textwrap = {version = "0.16.2",default-features = false,features = ["unicode-width","unicode-linebreak"]}

[dev-dependencies]
rand = "0.9"
