[package]
name = "quick_perf_event"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["m-mueller678"]
description = "lightweight framework for measuring and reporting performance counters accross labeled workloads"
repository = "https://github.com/m-mueller678/quick-perf-event"
readme = "readme.md"
categories = ["development-tools::profiling"]
keywords = ["perf", "perf-events", "perf-event-open", "benchmark"]

[dependencies]
tabled = { version = "0.20.0", default-features = false, features = ["std"] }
csv = "1.4"
textwrap = { version = "0.16.2", default-features = false, features = [
  "unicode-width",
  "unicode-linebreak",
] }
terminal_size = "0.4.3"

[target.'cfg(target_os="linux")'.dependencies]
perf-event2 = "0.7.4"

[dev-dependencies]
rand = "0.9"
